--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "@next-auth/prisma-adapter": "^1.0.6",
     "@prisma/client": "^4.14.1",
-    "next": "12.0.10",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
+    "eslint-config-next": "^13.4.4",
+    "next": "^13.4.4",
+    "next-auth": "^4.22.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-markdown": "8.0.0"
   },
   "devDependencies": {
