--- a/package.json
+++ b/package.json
@@ -11,8 +11,22 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "@emotion/react": "^11.11.0",
+    "@emotion/server": "^11.11.0",
+    "@mantine/core": "^6.0.11",
+    "@mantine/dates": "^6.0.11",
+    "@mantine/form": "^6.0.11",
+    "@mantine/hooks": "^6.0.11",
+    "@mantine/modals": "^6.0.11",
+    "@mantine/next": "^6.0.11",
+    "@mantine/tiptap": "^6.0.11",
     "@next-auth/prisma-adapter": "^1.0.6",
     "@prisma/client": "^4.14.1",
+    "@tabler/icons-react": "^2.20.0",
+    "@tiptap/extension-link": "^2.0.3",
+    "@tiptap/react": "^2.0.3",
+    "@tiptap/starter-kit": "^2.0.3",
+    "dayjs": "^1.11.7",
     "eslint-config-next": "^13.4.4",
     "next": "^13.4.4",
     "next-auth": "^4.22.1",
