--- a/package.json
+++ b/package.json
@@ -13,13 +13,14 @@
   "dependencies": {
     "@emotion/react": "^11.11.0",
     "@emotion/server": "^11.11.0",
-    "@mantine/core": "^6.0.11",
-    "@mantine/dates": "^6.0.11",
-    "@mantine/form": "^6.0.11",
-    "@mantine/hooks": "^6.0.11",
-    "@mantine/modals": "^6.0.11",
-    "@mantine/next": "^6.0.11",
-    "@mantine/tiptap": "^6.0.11",
+    "@mantine/core": "^6.0.13",
+    "@mantine/dates": "^6.0.13",
+    "@mantine/form": "^6.0.13",
+    "@mantine/hooks": "^6.0.13",
+    "@mantine/modals": "^6.0.13",
+    "@mantine/next": "^6.0.13",
+    "@mantine/notifications": "^6.0.13",
+    "@mantine/tiptap": "^6.0.13",
     "@next-auth/prisma-adapter": "^1.0.6",
     "@prisma/client": "^4.15.0",
     "@tabler/icons-react": "^2.20.0",
