--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "next-auth": "^4.22.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-markdown": "8.0.0"
+    "react-markdown": "8.0.0",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@types/node": "17.0.14",
