--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
   "devDependencies": {
     "@types/node": "17.0.14",
     "@types/react": "17.0.38",
+    "@types/uuid": "^9.0.1",
     "prisma": "^4.15.0",
     "typescript": "4.5.5"
   }
